Added authentication that was missing
Added authentication to API calls that were missing it.
Added Python scripts to show how to some API calls.
Updated openapi.yaml.
